--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,7 @@
   "name": "my-one-mile",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,18 +10,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mssql": "^9.1.5",
+    "@types/sequelize": "^4.28.20",
+    "@types/validator": "^13.12.0",
+    "mssql": "^11.0.1",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "sequelize": "^6.37.3",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
