feat: connect to db and add user model

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "my-one-mile",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npm run dev --prefix web"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "uuid": "^10.0.0"
+  }
 }
