--- a/web/package.json
+++ b/web/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@types/mssql": "^9.1.5",
     "@types/sequelize": "^4.28.20",
+    "@types/tedious": "^4.0.14",
+    "@types/uuid": "^10.0.0",
     "@types/validator": "^13.12.0",
     "mssql": "^11.0.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "sequelize": "^6.37.3",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "tedious": "^18.3.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
