feat: add login and signup route working
add bcrypt validation mechanism
add logout button

--- a/package.json
+++ b/package.json
@@ -8,7 +8,5 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "uuid": "^10.0.0"
-  }
+  "dependencies": {}
 }
