--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/mssql": "^9.1.5",
     "@types/sequelize": "^4.28.20",
     "@types/tedious": "^4.0.14",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.12.0",
+    "bcrypt": "^5.1.1",
     "mssql": "^11.0.1",
     "next": "14.2.5",
     "react": "^18",
