--- a/package.json
+++ b/package.json
@@ -8,5 +8,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {}
+  "dependencies": {
+    "cloudinary": "^2.4.0"
+  }
 }
