--- a/web/package.json
+++ b/web/package.json
@@ -10,14 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/search-js-react": "^1.0.0-beta.22",
     "@types/bcrypt": "^5.0.2",
+    "@types/mapbox": "^1.6.45",
     "@types/mssql": "^9.1.5",
+    "@types/multer": "^1.4.11",
     "@types/sequelize": "^4.28.20",
     "@types/tedious": "^4.0.14",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.12.0",
     "bcrypt": "^5.1.1",
+    "country-state-city": "^3.2.1",
     "mssql": "^11.0.1",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
