--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mapbox/search-js-react": "^1.0.0-beta.22",
     "@types/bcrypt": "^5.0.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/mapbox": "^1.6.45",
     "@types/mssql": "^9.1.5",
     "@types/multer": "^1.4.11",
@@ -20,8 +21,10 @@
     "@types/validator": "^13.12.0",
     "bcrypt": "^5.1.1",
     "country-state-city": "^3.2.1",
+    "jose": "^5.8.0",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
