feat: all functionality of profile page add location add interface with azure api add location edit in profile route

--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
     "tedious": "^18.3.0",
