--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next dev",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build": "next build"
   },
   "dependencies": {
     "@mapbox/search-js-react": "^1.0.0-beta.22",
@@ -32,9 +33,11 @@
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
     "tedious": "^18.3.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "cloudinary": "^2.4.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
