feat: remove dummy activities data, fetch activities from db fetch activity and location using join fetch user location on create new activtiy page

--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "@types/jsonwebtoken": "^9.0.6",
-    "cloudinary": "^2.4.0"
-  }
+  "dependencies": {}
 }
